# image-processing

./: .gitignore  .pre-commit-config.yaml  README.md  development.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  searchindex.js  usage.html
.github/workflows/: built_docs.yml  pre-commit.yml  tests.yml
_modules/: index.html
_modules/image_processing/: combination.html  detector.html  kernels.html  params.html
_sources/: development.md.txt  installation.md.txt
api/: image_processing.html  modules.html
docs/source/: conf.py  development.md  index.rst  modules.rst  simpletorchtrainer.rst  usage.md
docs/source/api/: image_processing.rst  modules.rst
examples/: basic_usage.py  custom_kernel.py  edge_detection_demo.ipynb
src/create_kernel/: __init__.py  kernel.py
src/image_processing/: __init__.py  combination.py  detector.py  installation.md  kernels.py  params.py
tests/: conftest.py  test_combination.py  test_dataset.py  test_detector.py  test_kernels.py  test_metrics.py  test_models.py  test_params.py  test_trainer.py  test_utils.py
