[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# --------------------------------------------------
# Project metadata
# --------------------------------------------------

[project]
name = "image-processing"
version = "0.0.1"
description = "Edge detection with custom convolution kernel."
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE*"]
authors = [
    {name = "Bence Hajbel"},
    {name = "Balazs Paszkal Halmos"}
]

requires-python = ">=3.10"

keywords = [
    "pytorch",
    "image processing",
    "edge detection",
    "convolution"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.22",
    "scikit-learn>=1.1",
    "pre-commit",
    "opencv-python"
]

# --------------------------------------------------
# Optional dependency groups
# --------------------------------------------------

[project.optional-dependencies]

dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "coverage-badge",
    "black>=23",
    "ruff>=0.1",
    "mypy>=1.5",
    "pydocstyle",
    "nbqa>=1.7",
    "torchtyping"
]



docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "numpydoc"
]

# --------------------------------------------------
# URLs
# --------------------------------------------------

[project.urls]

Homepage = "https://github.com/dcintlab/image-processing"
Repository = "https://github.com/dcintlab/image-processing"
Issues = "https://github.com/dcintlab/image-processing/issues"

[tool.setuptools]
package-dir = {"" = "src"}

# --------------------------------------------------
# Pytest configuration
# --------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["create_kernel", "image_processing"]

[tool.pytest.ini_options]

testpaths = [
    "tests"
]

addopts = [
    "-v",
    "--strict-markers",
    "--disable-warnings"
]

# --------------------------------------------------
# Coverage configuration
# --------------------------------------------------

[tool.coverage.run]

source = ["src"]

omit = [
    "tests/*"
]

# --------------------------------------------------
# Black formatting
# --------------------------------------------------

[tool.black]

line-length = 88
target-version = ["py314"]

# --------------------------------------------------
# Ruff linter
# --------------------------------------------------

[tool.ruff]

line-length = 88
lint.select = ["E", "F", "I", "D"]
lint.ignore = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# --------------------------------------------------
# MyPy typing
# --------------------------------------------------

[tool.mypy]

python_version = "3.14"
strict = true
ignore_missing_imports = true
