[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# --------------------------------------------------
# Project metadata
# --------------------------------------------------

[project]
name = "image-processing"
version = "0.0.1"
description = "Edge detection with custom convolution kernel."
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE*"]
authors = [
    {name = "Bence Hajbel"},
    {name = "Balazs Paszkal Halmos"}
]

requires-python = ">=3.12"

keywords = [
    "pytorch",
    "image processing",
    "edge detection",
    "convolution"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dynamic = ["dependencies", "optional-dependencies"]

# --------------------------------------------------
# URLs
# --------------------------------------------------

[project.urls]

Homepage = "https://github.com/dcintlab/image-processing"
Repository = "https://github.com/dcintlab/image-processing"
Issues = "https://github.com/dcintlab/image-processing/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}
docs = {file = ["requirements-docs.txt"]}

[tool.setuptools]
package-dir = {"" = "src"}

# --------------------------------------------------
# Pytest configuration
# --------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["create_kernel", "image_processing"]

[tool.pytest.ini_options]

testpaths = [
    "tests"
]

addopts = [
    "-v",
    "--strict-markers",
    "--disable-warnings"
]

# --------------------------------------------------
# Coverage configuration
# --------------------------------------------------

[tool.coverage.run]

source = ["src"]

omit = [
    "tests/*"
]

# --------------------------------------------------
# Black formatting
# --------------------------------------------------

[tool.black]

line-length = 88
target-version = ["py312"]

# --------------------------------------------------
# Ruff linter
# --------------------------------------------------

[tool.ruff]

line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes — undefined names, unused imports
    "I",    # isort — import ordering
    "N",    # pep8-naming — class/function/variable naming conventions
    "D",    # pydocstyle — docstring style
    "UP",   # pyupgrade — modern Python syntax
    "B",    # flake8-bugbear — common bugs and design issues
    "C4",   # flake8-comprehensions — idiomatic list/dict/set comprehensions
    "SIM",  # flake8-simplify — flags unnecessarily complex code
    "RUF",  # Ruff-specific rules
]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# --------------------------------------------------
# MyPy typing
# --------------------------------------------------

[tool.mypy]

python_version = "3.12"
strict = true
ignore_missing_imports = true
